--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,21 +1,82 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>AngularUI - Date Picker Demo</title>
-  <base href=".."></base>
-  <link rel="stylesheet" href="components/jquery-ui/themes/smoothness/jquery-ui.css">
-  <script type="text/javascript" src="components/jquery/jquery.js"></script>
-  <script type="text/javascript" src="components/jquery-ui/ui/jquery-ui.custom.js"></script>
-  <script type="text/javascript" src="components/angular/angular.js"></script>
-  <script type="text/javascript" src="src/date.js"></script>
-</head>
-<body ng-app="ui.date">
-  <label>Select Date: <input type="text" ui-date ng-model="aDate"></label>
-  <div>{{aDate}}</div>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>AngularUI - uiSortable</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="http://lib.sinaapp.com/js/bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+      .sortable-placeholder {
+          border: 1px solid #fcefa1;
+          background: #fbf9ee;
+          color: #363636;
+          height: 28px;
+      }
+    </style>
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">AngularUI - uiSortable</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container" ng-app="uiSortableDemo" ng-controller="uiSortableCtr">
+
+      <h1>Demo 1</h1>
+      <i>Demo passing IE8/IE9/IE10/firefox/chrome</i>
+      <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>UID</th>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Email</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody ui-sortable="sortItems">
+            <tr ng-repeat="user in users">
+                <td>{{user.uid}}</td>
+                <td>{{user.name}}</td>
+                <td>{{user.age}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.desc}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <div><h2>Users Array:</h2>{{users}}</div>
+
+    </div> <!-- /container -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="http://lib.sinaapp.com/js/bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+    <script src="../src/sortable.js"></script>
+    <script src="demo.js"></script>
+
+  </body>
 </html>
