Fixing Travis, grunt tests and demo page (because of module updates).

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="components/jquery-ui/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="demo/demo.css">
   <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
-  <script type="text/javascript" src="bower_components/jquery-ui/ui/jquery-ui.custom.js"></script>
+  <script type="text/javascript" src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="src/sortable.js"></script>
   <script type="text/javascript">
