--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,61 +1,14 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>AngularUI - Sortable Demo</title>
-  <base href=".."></base>
-  <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.css">
-  <link rel="stylesheet" href="demo/demo.css">
-  <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
-  <script type="text/javascript" src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
-  <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="src/sortable.js"></script>
-  <script type="text/javascript">
-      var myapp = angular.module('sortableApp', ['ui.sortable']);
-
-      myapp.controller('sortableController', function ($scope) {
-          var tmpList = [];
-
-          for (var i = 1; i <= 6; i++){
-              tmpList.push({
-                text: 'Item ' + i,
-                value: i
-              });
-          }
-
-          $scope.list = tmpList;
-
-
-          $scope.sortingLog = [];
-          
-          $scope.sortableOptions = {
-              // called after a node is dropped
-              stop: function(e, ui) {
-                  var logEntry = {
-                    ID: $scope.sortingLog.length + 1,
-                    Text: 'Moved element: ' + ui.item.scope().item.text
-                  };
-                  $scope.sortingLog.push(logEntry);
-              }
-          };
-      });
-  </script>
-</head>
-<body ng-app="sortableApp" ng-controller="sortableController">
-  <div class="container">
-    <h2>ui.sortable demo</h2>
-
-    <ul ui-sortable="sortableOptions" ng-model="list" class="list">
-      <li ng-repeat="item in list" class="item">{{item.text}}</li>
-    </ul>
-
-    <ul class="list logList">
-      <li ng-repeat="entry in sortingLog" class="logItem">{{entry.Text}}</li>
-    </ul>
+<section ng-app="sortableApp" ng-controller="sortableController">
+  <div class="row">
+    <div class="span6">
+      <ul ui-sortable="sortableOptions" ng-model="list" class="list">
+        <li ng-repeat="item in list" class="item">{{item.text}}</li>
+      </ul>
+    </div>
+    <div class="span6">
+      <ul class="list logList">
+        <li ng-repeat="entry in sortingLog" class="logItem">{{entry.Text}}</li>
+      </ul>
+    </div>
   </div>
-</body>
-</html>
+</section>
