Travis commit : build 126

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 <script src="core/prettifyDirective.js"></script>
 <script src="core/plunker.js"></script>
 
+<script src="vendor/jquery.js"></script>
 <script src="vendor/jquery-ui.js"></script>
 <script src="dist/sortable.js"></script>
 
