--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,11 +1,11 @@
-<section ng-app="sortableApp" ng-controller="sortableController">
-  <div class="row">
-    <div class="col-md-6">
+<section ng-app="sortableApp">
+  <div ng-controller="sortableController" class="section row">
+    <div class="col-sm-offset-2 col-sm-4">
       <ul ui-sortable="sortableOptions" ng-model="list" class="list">
         <li ng-repeat="item in list" class="item">{{item.text}}</li>
       </ul>
     </div>
-    <div class="col-md-6">
+    <div class="col-sm-4">
       <ul class="list logList">
         <li ng-repeat="entry in sortingLog" class="logItem">{{entry.Text}}</li>
       </ul>
